# PyNamecheap

./: .gitignore  makefile  namecheap_tests.py  pyproject.toml  requirements.txt  setup.py
namecheap/: namecheap.py  objects.py
